<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="MovieList.MoviesFragment"
    android:id="@+id/main"
    android:layout_width="160dp"
    android:layout_height="305dp"
    android:layout_margin="11dp"
    android:background="@drawable/rounded_corners"

   >


    <ImageView
        android:id="@+id/image_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <ImageView
        android:id="@+id/movieThumbnail"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        tools:src="@drawable/ph_movie_grey_200"
        />

    <ImageView
        android:id="@+id/image_gradient"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/text_deprecate_two"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/age_rating_13"
        android:textStyle="bold"
        android:textSize="@dimen/text_medium_small"
        android:scaleType="centerCrop"
        android:textColor="@color/whitecolor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_style"
        style="@style/RobotoNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="214dp"
        android:text="@string/film_type"
        android:textColor="@color/pinkcolor"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="@+id/movieThumbnail"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="@+id/movieThumbnail"
        app:layout_constraintTop_toTopOf="@+id/movieThumbnail"
        tools:ignore="SmallSp" />

    <!--            1. на макете заголовок располагается не под постером. Середина заголовка выровнена по
    нижнему краю постера
    2. Если marginEnd и marginStart равны, то можно указать просто marginHorizontal. А вообще на этом экране лучше указать
    2 вертикальных guideline с отступами от краев экрана по 16dp и привязывать элементы к ним, чтобы везде горизонтальные
    margin не задавать
    3. singleline false можно не указывать, так как это значение по-умолчанию-->

    <!--            1. id у всез вью сейчас имеют неговорящие имена. по коду ты не сможешь понять, что за элемент
    textView2, пока не залезешь в верстку и не посмотришь. Имена необходимо давать такие, чтобы по нему было
    понятно, что это за вью. Здесь например это может быть movie_genres
    2. на макете есть отступ сверху равный 4dp-->


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:numStars="5"
        android:stepSize="0.1"
        style="?android:attr/ratingBarStyleSmall"
        app:layout_constraintBottom_toBottomOf="@+id/movieThumbnail"
        app:layout_constraintStart_toStartOf="@+id/text_style"
        app:layout_constraintTop_toBottomOf="@+id/text_style" />

    <TextView
        android:id="@+id/text_reviewsx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/roboto_medium"
        android:text="@string/_125_reviews"
        android:textColor="@color/greycolor"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/text_style" />


    <TextView
        android:id="@+id/movieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center_vertical"
        android:scaleType="centerCrop"
        style="@style/RobotoNormal"
        android:text="@string/avengers_movie_name1"
        android:textColor="@color/whitecolor"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/movieThumbnail"
        app:layout_constraintStart_toStartOf="@+id/movieThumbnail"
        app:layout_constraintTop_toBottomOf="@+id/movieThumbnail" />


    <TextView
        android:id="@+id/text_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/RobotoNormal"
        android:text="@string/_137_min"
        android:textColor="@color/greycolor"
        android:textSize="@dimen/text_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/movieName"
        app:layout_constraintTop_toBottomOf="@+id/movieName" />



</androidx.constraintlayout.widget.ConstraintLayout>